--- a/myBrand.html
+++ b/myBrand.html
@@ -72,6 +72,7 @@
         </footer>
         <script src="js/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<!--<script src="js/zepto.min.js" type="text/javascript" charset="utf-8"></script>-->
+        <script src="js/lib/checkLogin.js"></script>
 		<script type='text/javascript' src='js/rem.js' charset='utf-8'></script>
 		<script src="js/jquery.qrcode.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/qrcode.js" type="text/javascript" charset="utf-8"></script>
