--- a/withdraw.html
+++ b/withdraw.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/withdraw.css"/>
         <script src="js/jquery-1.11.0.min.js"></script>
         <script src="js/zepto.min.js"></script>
+        <script src="js/lib/checkLogin.js"></script>
         <script src="js/frozen.js"></script>
     </head>
     <body ontouchstart>
