--- a/brandAgent.html
+++ b/brandAgent.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="css/brandAgent.css"/>
         <script src="js/jquery-1.11.0.min.js"></script>
         <script src="js/zepto.min.js"></script>
+        <script src="js/lib/checkLogin.js"></script>
         <script src="js/frozen.js"></script>
     </head>
     <body>
