--- a/myIncome.html
+++ b/myIncome.html
@@ -32,6 +32,7 @@
         	<li class="myBrand"></li>
         </footer>
         <script src="js/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/lib/checkLogin.js"></script>
 		<script type='text/javascript' src='js/rem.js' charset='utf-8'></script>
 		<script src="js/myIncome.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript">
